--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,13 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "hardhat": "^2.19.4"
+    "hardhat": "^2.19.4",
+    "hardhat-tracer": "^2.7.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.1"
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.3",
+    "@openzeppelin/contracts": "^5.0.1",
+    "chai": "^4.4.1",
+    "ethers": "^6.10.0"
   }
 }
